--- a/ext/menu/styledLayerControl.css
+++ b/ext/menu/styledLayerControl.css
@@ -167,3 +167,25 @@ div[id^="leaflet-control-accordion-layers"] > label:hover {
 	border-radius: 5px;
 }
 
+html::-webkit-scrollbar {
+    display: inherit;
+}
+
+html:hover::-webkit-scrollbar {
+    width: 10px;
+}
+
+html:hover::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+            box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
+
+html:hover::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(100,100,100,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+            box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
