--- a/websig_areal.css
+++ b/websig_areal.css
@@ -93,3 +93,26 @@ html, body{
     margin-top:1px;
     margin-left: -4px;
 }
+
+html::-webkit-scrollbar {
+    display: inherit;
+}
+
+html:hover::-webkit-scrollbar {
+    width: 10px;
+}
+
+html:hover::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+            box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
+
+html:hover::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(100,100,100,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+            box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
